2006-10-30  Tobias Burnus  <burnus@net-b.de>

       PR fortran/29452
       * gfortran.dg/write_check.f90: Check run-time keyword checking.
       * gfortran.dg/write_check2.f90: Check compile-time keyword checking.

2006-10-30  Joseph Myers  <joseph@codesourcery.com>

	* lib/target-supports.exp (check_function_available): Declare
	function before calling.

2006-10-30  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/29637
	* gcc.dg/pr29637.c: New test.

2006-10-26  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/29563
	* gfortran.dg/arrayio_9.f90: New test.
	* gfortran.dg/arrayio_19.f90: New test.

2006-10-26  Andreas Krebbel  <krebbel1@de.ibm.com>

	* gcc.dg/20061026.c: New testcase.

2006-10-25  Steve Ellcey  <sje@cup.hp.com>

	* gcc.dg/pthread-init-2.c: Define _POSIX_C_SOURCE on ia64 HP-UX.

2006-10-24  Erik Edelmann  <eedelman@gcc.gnu.org>

	PR fortran/29393
	* gfortran.dg/initialize_2.f90: New.

2006-10-22  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/20647
	* g++.dg/abi/rtti3.C: New.

2006-10-23  Ulrich Weigand  <uweigand@de.ibm.com>

	* g++.dg/other/s390-1.C: New testcase.

2006-10-20  Lee Millward  <lee.millward@codesourcery.com>
        
        PR c++/28053
        * g++.dg/parse/bitfield1.C: Adjust error markers.
        * g++.dg/parse/bitfield2.C: New test. 
	
2006-10-20  Adam Nemet  <anemet@caviumnetworks.com>

	* gcc.dg/tree-ssa/ivopts-2.c: Match final candidates line only.

2006-10-19  Francois-Xavier Coudert  <coudert@clipper.ens.fr>

	PR libfortran/27895
	* gfortran.dg/zero_sized_1.f90: New test.

2006-10-19  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.dg/div-compare-1.c: New test.

2006-10-19  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/29216
	* gfortran.dg/result_default_init_1.f90: New test.

	PR fortran/29314
	* gfortran.dg/automatic_default_init_1.f90: New test.

	* gfortran.dg/alloc_comp_basics_1.f90: Reduce deallocate count
	from 38 to 33.

2006-10-18  Geoffrey Keating  <geoffk@apple.com>
